Fix overflow y on user edit page.

--- a/sites/all/themes/cleancustom/assets/sass/pages/_user.scss
+++ b/sites/all/themes/cleancustom/assets/sass/pages/_user.scss
@@ -83,3 +83,6 @@
 .confirm-parent {
   display: none;
 }
+#edit-picture-upload {
+  display: none;
+}
